@@ -43,6 +43,7 @@ sunuo (0.3.2) unstable; urgency=low
       - Guild.m_Allies, Guild.m_Enemies, Guild.m_WarDeclarations,
         Guild.m_WarInvitations, Guild.m_AllyDeclarations,
         Guild.m_AllyInvitations, Guild.m_Candidates, Guild.m_Accepted
+      - Account.m_Comments
     - use XmlReader instead of XmlDocument.Load() to parse the accounts file
     - use DateTime.Now cache
   * moved into separate script libraries:
